--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <header class="nav">
     <div class="nav-container">
       <div class="logo">
-        <a href="#top" aria-label="Back to top">
-          <img src="Urbivista_Logo_FullColor.png" alt="Urbivista logo" class="logo-img" />
+        <a href="#top" aria-label="Urbivista home">
+          <img src="Urbivista_Logo_FullColor.png" alt="Urbivista logo" />
         </a>
       </div>
 
@@ -50,7 +50,7 @@
 
   <!-- Hero -->
   <main class="hero">
-    <div class="container hero-inner">
+    <div class="hero-container">
       <div class="hero-copy">
         <p class="eyebrow">Enterprise Location Intelligence</p>
         <h1>Smarter site selection through data-driven insight</h1>
@@ -58,26 +58,27 @@
           Urbivista empowers enterprises to evaluate locations with clarity, confidence,
           and defensible analytics.
         </p>
+
         <div class="buttons">
           <a href="#features" class="primary">Explore the Platform</a>
           <a href="#contact" class="secondary">Request a Briefing</a>
         </div>
       </div>
 
-      <div class="hero-card" role="note" aria-label="Key benefits">
+      <aside class="hero-card" aria-label="Key benefits">
         <h2>Built for executive decisions</h2>
         <ul>
           <li>Data-backed site scoring and tradeoffs</li>
           <li>Scenario modeling before capital is deployed</li>
           <li>Executive-ready reporting and documentation</li>
         </ul>
-      </div>
+      </aside>
     </div>
   </main>
 
   <!-- Features -->
   <section id="features" class="features">
-    <div class="container grid-3">
+    <div class="features-grid">
       <div class="feature-card">
         <h3>Location Intelligence</h3>
         <p>Demographics, traffic, workforce, and competitive data unified in one platform.</p>
@@ -95,7 +96,7 @@
 
   <!-- Platform -->
   <section id="platform" class="platform">
-    <div class="container platform-content">
+    <div class="platform-content">
       <div class="platform-text">
         <h2>The Urbivista Platform</h2>
         <p>
@@ -118,7 +119,7 @@
 
   <!-- Solutions -->
   <section id="solutions" class="solutions">
-    <div class="container">
+    <div class="solutions-container">
       <h2>Enterprise Solutions</h2>
 
       <div class="solution">
@@ -137,33 +138,4 @@
         <div>
           <h3>Scenario Modeling</h3>
           <p>
-            Model multiple site scenarios, forecast performance, and understand risk
-            before deploying capital.
-          </p>
-        </div>
-      </div>
-
-      <div class="solution">
-        <img src="enterprise-tools.png" alt="Enterprise expansion tools" loading="lazy" decoding="async" />
-        <div>
-          <h3>Enterprise Expansion</h3>
-          <p>
-            Purpose-built for multi-location growth, internal approvals, and executive
-            accountability.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="cta">
-    <div class="container cta-inner">
-      <div>
-        <h2>Make confident expansion decisions</h2>
-        <p>
-          See how Urbivista supports enterprise site selection with defensible,
-          data-driven insight.
-        </p>
-      </div>
-      <a href="#contact" class=
+            Model multiple site scenarios, forecast performance, and understa
