--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
       <nav class="nav-links" aria-label="Primary navigation">
         <a href="#features">Platform</a>
+        <a href="#platform">Product</a>
         <a href="#solutions">Solutions</a>
         <a href="blog.html">Blog</a>
         <a href="#contact" class="nav-cta">Contact</a>
@@ -94,7 +95,7 @@
     </div>
   </section>
 
-  <!-- Platform -->
+  <!-- Platform (USES platform-dashboard.png) -->
   <section id="platform" class="platform">
     <div class="platform-content">
       <div class="platform-text">
@@ -117,11 +118,12 @@
     </div>
   </section>
 
-  <!-- Solutions -->
+  <!-- Solutions (USES the 3 remaining PNGs) -->
   <section id="solutions" class="solutions">
     <div class="solutions-container">
       <h2>Enterprise Solutions</h2>
 
+      <!-- location-intelligence.png -->
       <div class="solution">
         <img src="location-intelligence.png" alt="Location intelligence analysis" loading="lazy" decoding="async" />
         <div>
@@ -133,9 +135,70 @@
         </div>
       </div>
 
+      <!-- scenario-modeling.png -->
       <div class="solution">
         <img src="scenario-modeling.png" alt="Scenario modeling" loading="lazy" decoding="async" />
         <div>
           <h3>Scenario Modeling</h3>
           <p>
-            Model multiple site scenarios, forecast performance, and understa
+            Model multiple site scenarios, forecast performance, and understand risk
+            before deploying capital.
+          </p>
+        </div>
+      </div>
+
+      <!-- enterprise-tools.png (this fixes your missing “Enterprise Focused” visual) -->
+      <div class="solution">
+        <img src="enterprise-tools.png" alt="Enterprise tools for multi-location expansion" loading="lazy" decoding="async" />
+        <div>
+          <h3>Enterprise Focused</h3>
+          <p>
+            Purpose-built for multi-location growth, internal approvals, and executive
+            accountability — with clear documentation behind every recommendation.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta">
+    <div class="cta-inner">
+      <div class="cta-copy">
+        <h2>Make confident expansion decisions</h2>
+        <p>
+          See how Urbivista supports enterprise site selection with defensible,
+          data-driven insight.
+        </p>
+      </div>
+      <a href="#contact" class="primary">Request a Demo</a>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="contact">
+    <div class="contact-container">
+      <h2>Contact Urbivista</h2>
+      <p>Reach out for platform demos, investor briefings, or partnership inquiries.</p>
+
+      <ul class="contact-info">
+        <li><strong>Email:</strong> <a href="mailto:luke@urbivista.io">luke@urbivista.io</a></li>
+        <li><strong>Phone:</strong> <a href="tel:+12193868562">+1 (219) 386-8562</a></li>
+        <li><strong>Address:</strong> 9191 Broadway, Merrillville, IN 46410</li>
+      </ul>
+
+      <form class="contact-form" action="https://formspree.io/f/meoyydpn" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Urbivista. All rights reserved.</p>
+  </footer>
+</body>
+</html>
