--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
   </section>
 
-  <!-- Platform (USES platform-dashboard.jpg) -->
+  <!-- Platform (USES platform-dashboard.png) -->
   <section id="platform" class="platform">
     <div class="platform-content">
       <div class="platform-text">
@@ -113,7 +113,7 @@
       </div>
 
       <div class="platform-image">
-        <img src="platform-dashboard.jpg" alt="Enterprise site selection dashboard" loading="lazy" decoding="async" />
+        <img src="platform-dashboard.png" alt="Enterprise site selection dashboard" loading="lazy" decoding="async" />
       </div>
     </div>
   </section>
