--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,20 @@
     </div>
   </div>
 </main>
+  <article class="blog-card">
+  <p class="blog-meta">Jan 12, 2026 • Expansion Strategy</p>
+  <h2 class="blog-title">
+    <a href="posts/accurate-site-selection-saves-money.html">
+      How Accurate Site Selection Early Can Save You a Fortune Later
+    </a>
+  </h2>
+  <p class="blog-excerpt">
+    Permitting delays, infrastructure surprises, and demand shifts are expensive. Here’s how a defensible site selection process
+    prevents costly downstream issues.
+  </p>
+  <a class="blog-read" href="posts/accurate-site-selection-saves-money.html">Read more →</a>
+</article>
+
 
 <footer class="footer">
   <div class="container footer-inner">
