--- a/blog.html
+++ b/blog.html
@@ -56,8 +56,22 @@
   </p>
   <a class="blog-read" href="posts/accurate-site-selection-saves-money.html">Read more →</a>
 </article>
-
   </div>
+  <article class="blog-card">
+  <p class="blog-meta">Jan 2026 • Site Selection</p>
+  <h2 class="blog-title">
+    <a href="posts/site-selection-fails-at-assumptions.html">
+      Why Most Site Selection Decisions Fail at the Assumption Stage
+    </a>
+  </h2>
+  <p class="blog-excerpt">
+    Undocumented assumptions quietly derail site selection decisions.
+    Here’s why that happens—and how to build a defensible process.
+  </p>
+  <a class="blog-read" href="posts/site-selection-fails-at-assumptions.html">Read more →</a>
+</article>
+</div>
+  
 </main>
  
 
