--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
       </article>
     </div>
      <article class="blog-card">
-  <p class="blog-meta">Jan 12, 2026 • Expansion Strategy</p>
+  <p class="blog-meta">Dec 17, 2026 • Expansion Strategy</p>
   <h2 class="blog-title">
     <a href="posts/accurate-site-selection-saves-money.html">
       How Accurate Site Selection Early Can Save You a Fortune Later
@@ -58,7 +58,7 @@
 </article>
   </div>
   <article class="blog-card">
-  <p class="blog-meta">Jan 2026 • Site Selection</p>
+  <p class="blog-meta">Dec 3, 2025 • Site Selection</p>
   <h2 class="blog-title">
     <a href="posts/site-selection-fails-at-assumptions.html">
       Why Most Site Selection Decisions Fail at the Assumption Stage
