--- a/blog.html
+++ b/blog.html
@@ -1,53 +1,105 @@
-<main class="section">
-  <div class="container">
-    <header class="section-head">
-      <h1 style="margin:0 0 10px; font-size: 40px; font-weight: 900;">Urbivista Blog</h1>
-      <p>Articles on location intelligence, site selection, and expansion strategy.</p>
-    </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Urbivista Blog | Location Intelligence & Site Selection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Insights on enterprise site selection, location intelligence, and expansion strategy." />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="Urbivista_Logo_FullColor.png" />
 
-    <div class="blog-list">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Urbivista Blog" />
+  <meta property="og:description" content="Insights on enterprise site selection, location intelligence, and expansion strategy." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.urbivista.io/blog.html" />
+  <meta property="og:image" content="https://www.urbivista.io/Urbivista_Logo_FullColor.png" />
+</head>
 
-      <article class="blog-card">
-        <p class="blog-meta">Jan 12, 2026 • Site Selection</p>
-        <h2 class="blog-title">
-          <a href="posts/how-to-evaluate-sites.html">
-            How to Evaluate Sites with Defensible Location Intelligence
-          </a>
-        </h2>
-        <p class="blog-excerpt">
-          A practical framework for comparing locations, documenting assumptions, and making decisions executives can stand behind.
-        </p>
-        <a class="blog-read" href="posts/how-to-evaluate-sites.html">Read more →</a>
-      </article>
+<body>
 
-      <article class="blog-card">
-        <p class="blog-meta">Dec 17, 2026 • Expansion Strategy</p>
-        <h2 class="blog-title">
-          <a href="posts/accurate-site-selection-saves-money.html">
-            How Accurate Site Selection Early Can Save You a Fortune Later
-          </a>
-        </h2>
-        <p class="blog-excerpt">
-          Permitting delays, infrastructure surprises, and demand shifts are expensive.
-          Here’s how a defensible site selection process prevents costly downstream issues.
-        </p>
-        <a class="blog-read" href="posts/accurate-site-selection-saves-money.html">Read more →</a>
-      </article>
+  <!-- Navigation -->
+  <header class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html" aria-label="Urbivista home">
+        <img src="Urbivista_Logo_FullColor.png" alt="Urbivista logo" class="brand-logo" />
+      </a>
 
-      <article class="blog-card">
-        <p class="blog-meta">Dec 3, 2025 • Site Selection</p>
-        <h2 class="blog-title">
-          <a href="posts/site-selection-fails-at-assumptions.html">
-            Why Most Site Selection Decisions Fail at the Assumption Stage
-          </a>
-        </h2>
-        <p class="blog-excerpt">
-          Undocumented assumptions quietly derail site selection decisions.
-          Here’s why that happens—and how to build a defensible process.
-        </p>
-        <a class="blog-read" href="posts/site-selection-fails-at-assumptions.html">Read more →</a>
-      </article>
-
+      <nav class="nav-links" aria-label="Primary navigation">
+        <a href="index.html#features">Platform</a>
+        <a href="index.html#platform">Product</a>
+        <a href="index.html#solutions">Solutions</a>
+        <a href="blog.html" class="nav-cta">Blog</a>
+      </nav>
     </div>
-  </div>
-</main>
+  </header>
+
+  <!-- Page Header -->
+  <main class="section">
+    <div class="container">
+      <header class="section-head">
+        <h1 style="margin:0 0 10px; font-size: 40px; font-weight: 900; letter-spacing: -0.02em;">
+          Urbivista Blog
+        </h1>
+        <p>Articles on location intelligence, site selection, and expansion strategy.</p>
+      </header>
+
+      <!-- Blog List -->
+      <div class="blog-list">
+
+        <article class="blog-card">
+          <p class="blog-meta">Dec 3, 2025 • Site Selection</p>
+          <h2 class="blog-title">
+            <a href="posts/site-selection-fails-at-assumptions.html">
+              Why Most Site Selection Decisions Fail at the Assumption Stage
+            </a>
+          </h2>
+          <p class="blog-excerpt">
+            Undocumented assumptions quietly derail site selection decisions.
+            Here’s why that happens—and how to build a defensible process.
+          </p>
+          <a class="blog-read" href="posts/site-selection-fails-at-assumptions.html">Read more →</a>
+        </article>
+
+        <article class="blog-card">
+          <p class="blog-meta">Jan 12, 2026 • Site Selection</p>
+          <h2 class="blog-title">
+            <a href="posts/how-to-evaluate-sites.html">
+              How to Evaluate Sites with Defensible Location Intelligence
+            </a>
+          </h2>
+          <p class="blog-excerpt">
+            A practical framework for comparing locations, documenting assumptions,
+            and making decisions executives can stand behind.
+          </p>
+          <a class="blog-read" href="posts/how-to-evaluate-sites.html">Read more →</a>
+        </article>
+
+        <article class="blog-card">
+          <p class="blog-meta">Dec 17, 2026 • Expansion Strategy</p>
+          <h2 class="blog-title">
+            <a href="posts/accurate-site-selection-saves-money.html">
+              How Accurate Site Selection Early Can Save You a Fortune Later
+            </a>
+          </h2>
+          <p class="blog-excerpt">
+            Permitting delays, infrastructure surprises, and demand shifts are expensive.
+            Here’s how a defensible site selection process prevents costly downstream issues.
+          </p>
+          <a class="blog-read" href="posts/accurate-site-selection-saves-money.html">Read more →</a>
+        </article>
+
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container footer-inner">
+      <p>© 2025 Urbivista. All rights reserved.</p>
+      <a href="index.html#top" class="to-top">Back to top ↑</a>
+    </div>
+  </footer>
+
+</body>
+</html>
