--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Urbivista is an enterprise SaaS platform for site selection, location intelligence, and expansion strategy using defensible, data-driven analytics." />
-  <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
   <link rel="stylesheet" href="styles.css" />
 
   <!-- Favicon -->
@@ -31,10 +31,15 @@
   <a id="top"></a>
 
   <!-- NAV -->
-  <header class="nav">
+  <header class="nav" role="banner">
     <div class="container nav-inner">
       <a class="brand" href="#top" aria-label="Urbivista home">
-        <img src="Urbivista_Logo_FullColor.png" alt="Urbivista logo" class="brand-logo" />
+        <img
+          src="Urbivista_Logo_FullColor.png"
+          alt="Urbivista logo"
+          class="brand-logo"
+          decoding="async"
+        />
       </a>
 
       <nav class="nav-links" aria-label="Primary navigation">
@@ -106,7 +111,7 @@
     </div>
   </section>
 
-  <!-- PLATFORM (restructured) -->
+  <!-- PLATFORM -->
   <section id="platform" class="section section-alt">
     <div class="container platform-grid">
       <div class="platform-text">
@@ -135,14 +140,19 @@
 
       <div class="platform-media">
         <div class="media-frame">
-          <img src="platform-dashboard.png" alt="Urbivista platform dashboard" loading="lazy" decoding="async" />
+          <img
+            src="platform-dashboard.png"
+            alt="Urbivista platform dashboard"
+            loading="lazy"
+            decoding="async"
+          />
         </div>
         <p class="caption">Example dashboard view (illustrative).</p>
       </div>
     </div>
   </section>
 
-  <!-- SOLUTIONS (uses all remaining PNGs) -->
+  <!-- SOLUTIONS -->
   <section id="solutions" class="section">
     <div class="container">
       <header class="section-head">
